N°4460 - Fix export header contrast in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -145,6 +145,8 @@ $ibo-vendors-datatables--row--background-color--is-even: $ibo-color-grey-800;
 $ibo-datatable--row--background-color--is-hover: $ibo-color-blue-900;
 $ibo-datatable--row--background-color--is-selected: $ibo-color-blue-700;
 
+$ibo-table-preview--header-cell--background-color: $ibo-color-grey-500;
+
 $ibo-field--value--color: $ibo-body-text-color;
 $ibo-title--text-color: $ibo-body-text-color;
 
